5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4145/executions/1575_1559.log
== TEST (2019-03-12 12:59:01) 
-- CODE:
frase = "ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA"
print(frase.???)
-- ERROR:
File "XXXX", line 2
    print(frase.???)
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 13:00:21) 
-- CODE:
frase ="Ada Lovelace foi a primeira programadora da historia."
print(.upper(frase.))
-- ERROR:
File "XXXX", line 2
    print(.upper(frase.))
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 13:00:27) 
-- CODE:
frase ="Ada Lovelace foi a primeira programadora da historia."
print(.upper(frase.)
-- ERROR:
File "XXXX", line 2
    print(.upper(frase.)
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 13:01:25) 
-- CODE:
frase =.upper("Ada Lovelace foi a primeira programadora da historia.")
print(frase.)
-- ERROR:
File "XXXX", line 1
    frase =.upper("Ada Lovelace foi a primeira programadora da historia.")
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 13:02:02) 
-- CODE:
frase ="Ada Lovelace foi a primeira programadora da historia."
print.upper((frase.))
-- ERROR:
File "XXXX", line 2
    print.upper((frase.))
                       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 13:02:35) 
-- CODE:
frase ="Ada Lovelace foi a primeira programadora da historia."
print(frase.upper)
-- OUTPUT:
<built-in method upper of str object at 0x7f1e880ea9f0>
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 13:03:35) 
-- CODE:
frase ="Ada Lovelace foi a primeira programadora da historia."
print.upper(frase)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print.upper(frase)
AttributeError: 'builtin_function_or_method' object has no attribute 'upper'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 13:04:24) 
-- CODE:
frase ="ada lovelace foi a primeira programadora da historia."
print.upper(frase)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print.upper(frase)
AttributeError: 'builtin_function_or_method' object has no attribute 'upper'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 13:04:28) 
-- CODE:
frase ="ada lovelace foi a primeira programadora da historia."
print.upper(frase)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print.upper(frase)
AttributeError: 'builtin_function_or_method' object has no attribute 'upper'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 13:05:09) 
-- CODE:
frase ="ada lovelace foi a primeira programadora da historia."
print(.upperfrase)
-- ERROR:
File "XXXX", line 2
    print(.upperfrase)
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 13:05:19) 
-- CODE:
frase ="ada lovelace foi a primeira programadora da historia."
print(.upper,frase)
-- ERROR:
File "XXXX", line 2
    print(.upper,frase)
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 13:05:27) 
-- CODE:
frase ="ada lovelace foi a primeira programadora da historia."
print(.upper.frase.)
-- ERROR:
File "XXXX", line 2
    print(.upper.frase.)
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 13:06:52) 
-- CODE:
frase ="ada lovelace foi a primeira programadora da historia."
print(frase.upper)
-- OUTPUT:
<built-in method upper of str object at 0x7f456426b9f0>
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 13:06:57) 
-- CODE:
frase ="ada lovelace foi a primeira programadora da historia."
print(frase.upper())
-- OUTPUT:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 13:07:01) 
-- CODE:
frase ="ada lovelace foi a primeira programadora da historia."
print(frase.upper())
-- EXECUTION TIME:
0.129758
-- TEST CASE 1:
---- input:
nonono
---- correct output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
---- user output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
